2008-01-21 Sancho Lerena <slerena@gmail.com>
	
	* pandora_db.pl: Disable compactation until fix bug in compactation
	function that currently delete data insted compacting it.  

2008-01-14 Sancho Lerena <slerena@gmail.com>

	*  conf/pandora_server.conf: New token for activate alert recovery: 
	alert_recovery 1/0 (disabled by default to retain compatibility).

	* Config.pm: Support for new alert_recovery option.

	* DB.pm: Implementation for alert_recovery option. Added flag to pass
	to execute_alert function to do not create event on alert firing due
	event is previously generated on calculate_alert function. Changes for
	management of data_proc type. If data is invalid (void or "") now this
	situation is managed as "invalid data" or "cannot get data" and set to
	"BAD" status and data 0 to have the same behaviour that icmp_proc and 
	tcp_proc (snmp_proc behaviour is also changed in pandora_network on this
	commit also).

	* pandora_snmpconsole: Fixes call for execute_alert (added flag to 1).

	* pandora_network: snmp_proc returns 0 value and bad status if cannot
	contact or cannot set SNMP session (read above).

2008-01-11 Sancho Lerena <slerena@gmail.com>

	* DB.pm: Fixed alert management for KeepAlive module. (Optional) Code for 
	notify on alert recovery.
	
	* pandora_network: Better management of thread locking. This should fix 
	latests problems reported.
	
2008-01-10 Sancho Lerena <slerena@gmail.com>

	* Config.pm: Version number update.
	
	* DB.pm: Support to manage keepalive modules in the correct way (more fixes)
	
	* pandora_server: Minimal improvement on zero data files, and new keepalive 	
	mamagement (more fixes over yesterday code).
	
	This is the first 1.3.1 version commit (Server)

2008-01-08  Sancho Lerena  <slerena@gmail.com>

        * Config.pm: Updated version to 1.3.1-dev
        
        * DB.pm: Added generic db function give_db_free(). keepalive modules area
        managed differently. Now have type 100 and update only tagente_estado table