@@ -334,77 +334,86 @@ sub pandora_query_tcp (%$$$$$$$) {
 	my $tcp_send = $_[5];
 	my $tcp_rcv = $_[6];
 	my $id_tipo_modulo = $_[7];
-	
-	my $temp; my $temp2;
-	my $tam;
 
-	my $handle=IO::Socket::INET->new(
-		Proto=>"tcp",
-		PeerAddr=>$ip_target,
-		Timeout=>$pa_config->{'networktimeout'},
-		PeerPort=>$tcp_port,
-		Blocking=>0 ); # Non blocking !!, very important !
-		
-	if (defined($handle)){
-		if ($tcp_send ne ""){ # its Expected to sending data ?
-			# Send data
-			$handle->autoflush(1);
-			$tcp_send =~ s/\^M/\r\n/g;
-			# Replace Carriage rerturn and line feed
-			$handle->send($tcp_send);
-		}
-		# we expect to receive data ? (non proc types)
-		if (($tcp_rcv ne "") || ($id_tipo_modulo == 10) || ($id_tipo_modulo ==8) || ($id_tipo_modulo == 11)) {
-			# Receive data, non-blocking !!!! (VERY IMPORTANT!)
-			$temp2 = "";
-			for ($tam=0; $tam<($pa_config->{'networktimeout'}); $tam++){
-				$handle->recv($temp,16000,0x40);
-				$temp2 = $temp2.$temp;
-				if ($temp ne ""){
-					$tam++; # If doesnt receive data, increase counter
-				}
-				sleep(1);
-			}
-			if ($id_tipo_modulo == 9){ # only for TCP Proc
-				if ($temp2 =~ /$tcp_rcv/i){ # String match !
-					$$module_data = 1;
-					$$module_result = 0;
-				} else {
-					$$module_data = 0;
-					$$module_result = 0;
-				}
-			} elsif ($id_tipo_modulo == 10 ){ # TCP String (no int conversion)!
-				$$module_data = $temp2;
-				$$module_result =0;
-			} else { # TCP Data numeric (inc or data)
-				if ($temp2 ne ""){
-					if ($temp2 =~ /[A-Za-z\.\,\-\/\\\(\)\[\]]/){
-						$$module_result = 1;
-						$$module_data = 0; # invalid data
-					} else {
-						$$module_data = int($temp2);
-						$$module_result = 0; # Successful
-					}
-				} else {
-						$$module_result = 1; 
-                                                $$module_data = 0; # invalid data
-					}
-			}
-		} else { # No expected data to receive, if connected and tcp_proc type successful
-			if ($id_tipo_modulo == 9){ # TCP Proc
-				$$module_result = 0;
-				$$module_data = 1;
-			}
-		}
-		$handle->close();
-		undef ($handle);
-	} else { # Cannot connect (open sock failed)
-		$$module_result = 1; # Fail
-		if ($id_tipo_modulo == 9){ # TCP Proc
-			$$module_result = 0;
-			$$module_data = 0; # Failed, but data exists
-		}
-	}
+        my $counter; 
+        for ($counter =0; $counter < $pa_config->{'tcp_checks'}; $counter++){
+	        my $temp; my $temp2;
+	        my $tam;
+	        my $handle=IO::Socket::INET->new(
+		        Proto=>"tcp",
+		        PeerAddr=>$ip_target,
+		        Timeout=>$pa_config->{'tcp_timeout'},
+		        PeerPort=>$tcp_port,
+		        Blocking=>0 ); # Non blocking !!, very important !
+		        
+	        if (defined($handle)){
+		        if ($tcp_send ne ""){ # its Expected to sending data ?
+			        # Send data
+			        $handle->autoflush(1);
+			        $tcp_send =~ s/\^M/\r\n/g;
+			        # Replace Carriage rerturn and line feed
+			        $handle->send($tcp_send);
+		        }
+		        # we expect to receive data ? (non proc types)
+		        if (($tcp_rcv ne "") || ($id_tipo_modulo == 10) || ($id_tipo_modulo ==8) || ($id_tipo_modulo == 11)) {
+			        # Receive data, non-blocking !!!! (VERY IMPORTANT!)
+			        $temp2 = "";
+			        for ($tam=0; $tam<($pa_config->{'tcp_timeout'}); $tam++){
+				        $handle->recv($temp,16000,0x40);
+				        $temp2 = $temp2.$temp;
+				        if ($temp ne ""){
+					        $tam++; # If doesnt receive data, increase counter
+				        }
+				        sleep(1);
+			        }
+			        if ($id_tipo_modulo == 9){ # only for TCP Proc
+				        if ($temp2 =~ /$tcp_rcv/i){ # String match !
+					        $$module_data = 1;
+					        $$module_result = 0;
+                                                $counter = $pa_config->{'tcp_checks'};
+				        } else {
+					        $$module_data = 0;
+					        $$module_result = 0;
+                                                $counter = $pa_config->{'tcp_checks'};
+				        }
+			        } elsif ($id_tipo_modulo == 10 ){ # TCP String (no int conversion)!
+				        $$module_data = $temp2;
+				        $$module_result =0;
+			        } else { # TCP Data numeric (inc or data)
+				        if ($temp2 ne ""){
+					        if ($temp2 =~ /[A-Za-z\.\,\-\/\\\(\)\[\]]/){
+						        $$module_result = 1;
+						        $$module_data = 0; # invalid data
+                                                        $counter = $pa_config->{'tcp_checks'};
+					        } else {
+						        $$module_data = int($temp2);
+						        $$module_result = 0; # Successful
+                                                        $counter = $pa_config->{'tcp_checks'};
+					        }
+				        } else {
+						        $$module_result = 1; 
+                                                        $$module_data = 0; # invalid data
+                                                        $counter = $pa_config->{'tcp_checks'};
+					        }
+			        }
+		        } else { # No expected data to receive, if connected and tcp_proc type successful
+			        if ($id_tipo_modulo == 9){ # TCP Proc
+				        $$module_result = 0;
+				        $$module_data = 1;
+                                        $counter = $pa_config->{'tcp_checks'};
+			        }
+		        }
+		        $handle->close();
+		        undef ($handle);
+	        } else { # Cannot connect (open sock failed)
+		        $$module_result = 1; # Fail
+		        if ($id_tipo_modulo == 9){ # TCP Proc
+			        $$module_result = 0;
+			        $$module_data = 0; # Failed, but data exists
+                                $counter = $pa_config->{'tcp_checks'};
+		        }
+	        }
+        }
 }
 
 ##########################################################################
@@ -418,11 +427,14 @@ sub pandora_query_snmp (%$$$$) {
 	my $snmp_target = $_[3];
 	# $_[4] contains error var.
 
-	my $output ="";
-	my $snmp_timeout = 1000 * 1000 * $pa_config->{"networktimeout"};
+        my $output ="";
+        my $snmp_timeout = 1000 * 1000 * $pa_config->{"snmp_timeout"};
+        my $snmp_retries = $pa_config->{'snmp_checks'};
+        $snmp_retries--; # First retry is implicit.
+                	
 	my $SESSION = new SNMP::Session (DestHost =>  $snmp_target,
 					Timeout   => $snmp_timeout,
-					Retries => 0,
+					Retries => $snmp_retries ,
                                 	Community => $snmp_community,
                                 	Version   => 1);
    	if ( (!defined($SESSION)) && ($snmp_target ne "") && ($snmp_community ne "") && ($snmp_oid ne "")) {
@@ -558,6 +570,8 @@ sub exec_network_module {
 			    $module_result = 0;
 			    # SNMP_DATA_PROC
 			    if ($id_tipo_modulo == 18){ #snmp_data_proc
+                            # RFC1213-MIB where it says that: SYNTAX INTEGER { up(1), down(2), testing(3),
+                            # unknown(4), dormant(5), notPresent(6), lowerLayerDown(7) } 
 				    if ($temp2 != 1){ # up state is 1, down state in SNMP is 2 ....
 					    $temp2 = 0;
 				    }
