@@ -103,3 +103,17 @@ icmp_checks 2
 # has the same field1, but adds "[RECOVER]" to field2 and field3. Is disabled by default.
 
 alert_recovery 1
+
+# tcp specific options :
+# tcp_checks: number of tcp retries if first attempt fails.
+# tcp_timeout: specific timeout for tcp connections
+
+tcp_checks 2
+tcp_timeout 30
+
+# snmp specific options :
+# snmp_checks: number of snmp request retries if first attempt fails.
+# snmp_timeout: specific timeout for snmp request.
+
+snmp_checks 1
+snmp_timeout 10
